# monty

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  README.md  how-it-works.md  plan-todo.md  plan.md  pyproject.toml
benches/: main.rs
crates/monty-js/: .gitignore  Cargo.toml  package-lock.json  package.json  wrapper.ts
crates/monty-js/__test__/: async.spec.ts  basic.spec.ts  external.spec.ts  repl.spec.ts  serialize.spec.ts  start.spec.ts  type_check.spec.ts  virtual_mount.spec.ts
crates/monty-js/smoke-test/: test.ts
crates/monty-js/src/: convert.rs  exceptions.rs  lib.rs  monty_cls.rs
limitations/: asyncio.md  builtins.md  classes.md  datetime.md  exceptions.md  filesystem.md  language.md  math.md  modules.md  namedtuple.md  open.md  os.md  pathlib.md  print.md  re.md  resource_limits.md  sys.md  typing.md
scripts/: iter_test_methods.py
src/: args.rs  callable.rs  evaluate.rs  exceptions.rs  exit.rs  expressions.rs  fstring.rs  function.rs  heap.rs  lib.rs  main.rs  object.rs  parse.rs  prepare.rs  run.rs  types.rs
test_cases/: bytes__ops.py  function__local_var.py  function__local_var_from_arg.py  function__local_var_list.py  function__local_var_modify_list.py  function__local_var_multiple.py  function__local_var_reassign.py  function__nested_basic.py  function__nested_deep.py  function__nested_multiple_calls.py  function__nested_two_inner.py  function__nested_with_args.py  function__no_args.py  function__one_arg.py  function__ops.py  function__three_args.py  function__two_args.py  hash__ops.py  id__ops.py  int__ops.py  (+3 more)
(+167 files in other folders)
